--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,128 +1,121 @@
-name: CI/CD Pipeline
+  name: CI/CD Pipeline
 
-on:
-  push:
-    branches: [ main, develop, feature/*, fix/* ]
-  pull_request:
-    branches: [ main, develop, feature/*, staging, fix/* ]
+  on:
+    push:
+      branches: [ main, develop, feature/*, fix/* ]
+    pull_request:
+      branches: [ main, develop, feature/*, staging, fix/* ]
 
-permissions:
-  contents: read
-  pull-requests: write
-  checks: write
-  statuses: write
+  permissions:
+    contents: read
+    pull-requests: write
+    checks: write
+    statuses: write
 
-env:
-  MAVEN_OPTS: -Dmaven.repo.local=~/.m2/repository
+  env:
+    MAVEN_OPTS: -Dmaven.repo.local=~/.m2/repository
 
-jobs:
-  build-and-test:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
+  jobs:
+    build-and-test:
+      runs-on: ubuntu-latest
+      steps:
+        - uses: actions/checkout@v4
 
-      - uses: actions/setup-java@v4
-        with:
-          java-version: '17'
-          distribution: 'temurin'
-          cache: 'maven'
+        - uses: actions/setup-java@v4
+          with:
+            java-version: '17'
+            distribution: 'temurin'
+            cache: 'maven'
 
-      - name: Build & Unit Tests
-        run: mvn clean package spring-boot:repackage
+        - name: Build & Unit Tests
+          run: mvn clean package spring-boot:repackage
 
-      - name: Upload artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: build-artifacts
-          path: |
-            target/*.jar
-            target/surefire-reports/*
-            target/site/jacoco/*
+        - name: Upload artifacts
+          uses: actions/upload-artifact@v4
+          with:
+            name: build-artifacts
+            path: |
+              target/*.jar
+              target/surefire-reports/*
+              target/site/jacoco/*
 
-      - name: Check Code Format
-        run: mvn spotless:check
+        - name: Check Code Format
+          run: mvn spotless:check
 
-  code-analysis:
-    runs-on: ubuntu-latest
-    needs: build-and-test
-    if: github.event_name == 'push' && github.ref == 'refs/heads/main' && github.event.pull_request == null
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-java@v4
-        with:
-          java-version: '17'
-          distribution: 'temurin'
+    code-analysis:
+      runs-on: ubuntu-latest
+      needs: build-and-test
+      if: github.event_name == 'push' && github.ref == 'refs/heads/main' && github.event.pull_request == null
+      steps:
+        - uses: actions/checkout@v4
+        - uses: actions/setup-java@v4
+          with:
+            java-version: '17'
+            distribution: 'temurin'
 
-      - name: Download build artifacts
-        uses: actions/download-artifact@v4
-        with:
-          name: build-artifacts
-          path: .
+        - name: Download build artifacts
+          uses: actions/download-artifact@v4
+          with:
+            name: build-artifacts
+            path: .
 
-      - name: Generate JaCoCo report
-        run: mvn jacoco:report -Djacoco.destFile=target/jacoco.exec
+        - name: Generate JaCoCo report
+          run: mvn jacoco:report -Djacoco.destFile=target/jacoco.exec
 
-      - name: SonarQube Analysis
-        env:
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-          SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          mvn sonar:sonar \
-            -Dsonar.projectKey=genesis-sirha \
-            -Dsonar.organization=Genesis-SIRHA \
-            -Dsonar.host.url=${SONAR_HOST_URL} \
-            -Dsonar.login=${SONAR_TOKEN} \
-            -Dsonar.coverage.jacoco.xmlReportPaths=target/site/jacoco/jacoco.xml \
-            -Dsonar.jacoco.reportPaths=target/jacoco.exec \
-            -Dsonar.sourceEncoding=UTF-8
+        - name: SonarQube Analysis
+          env:
+            SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+            SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
+            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          run: |
+            mvn sonar:sonar \
+              -Dsonar.projectKey=genesis-sirha \
+              -Dsonar.organization=Genesis-SIRHA \
+              -Dsonar.host.url=${SONAR_HOST_URL} \
+              -Dsonar.login=${SONAR_TOKEN} \
+              -Dsonar.coverage.jacoco.xmlReportPaths=target/site/jacoco/jacoco.xml \
+              -Dsonar.jacoco.reportPaths=target/jacoco.exec \
+              -Dsonar.sourceEncoding=UTF-8
 
-  deploy-sandbox:
-    runs-on: ubuntu-latest
-    needs: build-and-test
-    if: github.event_name == 'push' && github.ref == 'refs/heads/develop'
-    environment: sandbox
-    steps:
-      - uses: actions/checkout@v4
+    deploy-sandbox:
+      runs-on: ubuntu-latest
+      needs: build-and-test
+      if: github.event_name == 'push' && github.ref == 'refs/heads/develop'
+      environment: sandbox
+      steps:
+        - uses: actions/checkout@v4
 
-      - name: Download build artifacts
-        uses: actions/download-artifact@v4
-        with:
-          name: build-artifacts
-          path: target
+        - name: Download build artifacts
+          uses: actions/download-artifact@v4
+          with:
+            name: build-artifacts
+            path: target
 
-      - name: Login to Azure using Publish Profile
-        uses: azure/login@v1
-        with:
-          creds: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE_SANDBOX }}
+        - name: Deploy to Azure Web App
+          uses: azure/webapps-deploy@v3
+          with:
+            app-name: 'sirha-sandbox'
+            package: 'target/app.jar'
+            publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE_SANDBOX }}
 
-      - name: Deploy to Azure Web App
-        uses: azure/webapps-deploy@v3
-        with:
-          app-name: 'sirha-sandbox'
-          package: 'target/*.jar'
 
-  deploy-prod:
-    runs-on: ubuntu-latest
-    needs: build-and-test
-    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
-    environment: prod
-    steps:
-      - uses: actions/checkout@v4
+    deploy-prod:
+      runs-on: ubuntu-latest
+      needs: build-and-test
+      if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+      environment: prod
+      steps:
+        - uses: actions/checkout@v4
 
-      - name: Download build artifacts
-        uses: actions/download-artifact@v4
-        with:
-          name: build-artifacts
-          path: target
+        - name: Download build artifacts
+          uses: actions/download-artifact@v4
+          with:
+            name: build-artifacts
+            path: target
 
-      - name: Login to Azure using Publish Profile
-        uses: azure/login@v1
-        with:
-          creds: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE_PROD }}
-
-      - name: Deploy to Azure Web App
-        uses: azure/webapps-deploy@v3
-        with:
-          app-name: 'sirha-prod'
-          package: 'target/*.jar'
+        - name: Deploy to Azure Web App
+          uses: azure/webapps-deploy@v3
+          with:
+            app-name: 'sirha-prod'
+            package: 'target/app.jar'
+            publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE_PROD }}
